--- a/RecycleViewImplemenntation/app/src/main/res/layout/recycle_view_layout.xml
+++ b/RecycleViewImplemenntation/app/src/main/res/layout/recycle_view_layout.xml
@@ -3,11 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginRight="14dp"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-        <ImageButton
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+        <ImageView
             android:id="@+id/img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_launcher_background"/>
 
         <TextView
@@ -16,5 +17,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Name"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:gravity="center"/>
 </LinearLayout>
